created a todo list on server js file

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,8 @@ yarn-error.log*
 /ReactSide/node_modules/.cache
 ReactSide/node_modules/.cache/.eslintcache
 *.mov
+
+
+
+/NodeJS/node_modules
+.gitignore
